Update navigation links to point to the main index.html file across multiple Karmastat HTML pages, enhancing consistency in user navigation.

--- a/karmastat_checklists.html
+++ b/karmastat_checklists.html
@@ -663,7 +663,7 @@
         <h1>Research Reporting Checklists</h1>
         <p>CONSORT, STROBE, PRISMA & STARD Guidelines</p>
         <div class="nav-buttons">
-            <a href="karmastat_2_0_main.html" class="nav-btn">Back to Main</a>
+            <a href="index.html" class="nav-btn">Back to Main</a>
             <a href="karmastat_report_generator.html" class="nav-btn">Report Generator</a>
             <a href="karmastat_power_analysis.html" class="nav-btn">Power Analysis</a>
             <a href="karmastat_effect_size.html" class="nav-btn">Effect Size</a>
