--- a/karmastat_descriptive.html
+++ b/karmastat_descriptive.html
@@ -1060,7 +1060,7 @@
                 <span style="font-weight: 600; letter-spacing: 1px;">KARMASTAT</span>
             </div>
             <nav class="nav-buttons">
-                <a href="karmastat_2_0_main.html" class="nav-btn">Back to Main</a>
+                <a href="index.html" class="nav-btn">Back to Main</a>
                 <a href="karmastat_power_analysis.html" class="nav-btn">Power Analysis</a>
                 <a href="karmastat_references.html" class="nav-btn">References</a>
             </nav>
