--- a/karmastat_diagnostic.html
+++ b/karmastat_diagnostic.html
@@ -477,7 +477,7 @@
         <h1>Diagnostic Accuracy Studies</h1>
         <p>Sample size for sensitivity, specificity, and ROC analysis</p>
         <div class="nav-buttons">
-            <a href="karmastat_2_0_main.html" class="nav-btn">Back to Main</a>
+            <a href="index.html" class="nav-btn">Back to Main</a>
             <a href="karmastat_checklists.html" class="nav-btn">STARD Checklist</a>
             <a href="karmastat_references.html" class="nav-btn">References</a>
         </div>
