--- a/karmastat_effect_size.html
+++ b/karmastat_effect_size.html
@@ -790,7 +790,7 @@
     <div class="container">
         <!-- Header -->
         <header class="header">
-            <a href="karmastat_2_0_main.html" class="back-link">
+            <a href="index.html" class="back-link">
                 <span>&#8592;</span> Back to Main
             </a>
             <button class="theme-toggle" onclick="toggleTheme()">
