--- a/karmastat_references.html
+++ b/karmastat_references.html
@@ -907,7 +907,7 @@
                 <h1>Statistical References Library</h1>
                 <p>Comprehensive Reference Database for Sample Size Calculations</p>
                 <nav class="nav-links">
-                    <a href="karmastat_2_0_main.html" class="nav-link">&#8592; Back to Main</a>
+                    <a href="index.html" class="nav-link">&#8592; Back to Main</a>
                     <a href="karmastat_report_generator.html" class="nav-link">Report Generator</a>
                     <a href="karmastat_checklists.html" class="nav-link">Checklists</a>
                 </nav>
