--- a/karmastat_survival.html
+++ b/karmastat_survival.html
@@ -474,7 +474,7 @@
         <h1>Survival Analysis Calculator</h1>
         <p>Sample size for time-to-event studies and survival comparisons</p>
         <div class="nav-buttons">
-            <a href="karmastat_2_0_main.html" class="nav-btn">Back to Main</a>
+            <a href="index.html" class="nav-btn">Back to Main</a>
             <a href="karmastat_clinical_trials.html" class="nav-btn">Clinical Trials</a>
             <a href="karmastat_references.html" class="nav-btn">References</a>
         </div>
