--- a/karmastat_ttest.html
+++ b/karmastat_ttest.html
@@ -678,7 +678,7 @@
         <h1>T-Test & Mean Comparisons</h1>
         <p>Sample size for comparing means between groups</p>
         <div class="nav-buttons">
-            <a href="karmastat_2_0_main.html" class="nav-btn">Back to Main</a>
+            <a href="index.html" class="nav-btn">Back to Main</a>
             <a href="karmastat_power_analysis.html" class="nav-btn">Power Analysis</a>
             <a href="karmastat_effect_size.html" class="nav-btn">Effect Size</a>
         </div>
