--- a/karmastat_meta_analysis.html
+++ b/karmastat_meta_analysis.html
@@ -618,7 +618,7 @@
 
     <div class="container">
         <header class="header">
-            <a href="karmastat_2_0_main.html" class="back-link">
+            <a href="index.html" class="back-link">
                 <span>&#8592;</span> Back to Main
             </a>
             <button class="theme-toggle" onclick="toggleTheme()">
