--- a/karmastat_observational.html
+++ b/karmastat_observational.html
@@ -511,7 +511,7 @@
         <h1>Comparative Studies Calculator</h1>
         <p>Case-control and cohort study sample size calculations</p>
         <div class="nav-buttons">
-            <a href="karmastat_2_0_main.html" class="nav-btn">Back to Main</a>
+            <a href="index.html" class="nav-btn">Back to Main</a>
             <a href="karmastat_effect_size.html" class="nav-btn">Effect Size</a>
             <a href="karmastat_checklists.html" class="nav-btn">STROBE Checklist</a>
         </div>
