--- a/karmastat_sensitivity_analysis.html
+++ b/karmastat_sensitivity_analysis.html
@@ -984,7 +984,7 @@
 
     <div class="container">
         <header class="header">
-            <a href="karmastat_2_0_main.html" class="back-link">
+            <a href="index.html" class="back-link">
                 <span>&#8592;</span> Back to Main
             </a>
             <button class="theme-toggle" onclick="toggleTheme()" id="themeBtn">
